# json-annotator

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml
res/: bools_in_array.json  complex_data.json  different_items_in_array.json  nulls_in_array.json
src/json_annotator/: __init__.py  annotation.py  utils.py
tests/: auxiliary.py  conftest.py  test_annotation_correctness.py  test_sample_data_correctness.py
