[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "json-annotator"
version = "0.0.1"
authors = [
    { name= "Valery Arzumanov" },
]
description = "JSON Annotator"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "mypy>=1.15.0",
]

license = "MIT"
license-files = ["LICENSE"]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
enable_error_code = [
  "ignore-without-code",
]